--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,15 +1,15 @@
 .map {
   position: relative;
   padding-bottom: 385px;
+}
 
-  &__interactive {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 350px;
-    border: none;
-  }
+.map__interactive {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 350px;
+  border: none;
 }
 
 @media (min-width: @tablet-width) {
