--- a/source/less/globals/buttons.less
+++ b/source/less/globals/buttons.less
@@ -1,10 +1,8 @@
-.blue-button {
-  &:hover {
-    background-color: @blue-hover;
-  }
+.blue-button:hover {
+  background-color: @blue-hover;
+}
 
-  &:active {
-    background-color: @blue-down;
-    color: @blue-text;
-  }
+.blue-button:active {
+  background-color: @blue-down;
+  color: @blue-text;
 }
