--- a/source/less/style.less
+++ b/source/less/style.less
@@ -32,3 +32,5 @@
 @import "blocks/impression-form";
 @import "blocks/sightseen-form";
 @import "blocks/comments-form";
+@import "blocks/error-window";
+@import "blocks/success-window";
