--- a/source/less/globals/columns.less
+++ b/source/less/globals/columns.less
@@ -3,21 +3,17 @@
 }
 
 @media (min-width: @tablet-width) {
-  .columns {
-    &__item-33 {
+  .columns__item-33 {
       width: 33.3%;
-    }
+  }
 
-    &__item-66 {
-      width: 66.6%;
-    }
+  .columns__item-66 {
+    width: 66.6%;
   }
 }
 
 @media (min-width: @desctop-width) {
-  .columns {
-    &__item-33 {
-      width: 33.3%;
-    }
+  .columns__item-33 {
+    width: 33.3%;
   }
 }
